# spending-tracker

./: .gitignore  README.md  alembic.ini  package-lock.json  pyproject.toml
alembic/versions/: 0001_create_users_and_refresh_tokens.py  0003_create_expenses_table.py
app/: main.py
app/api/v1/: router.py
app/core/: security.py
app/dependencies/: auth.py  expense.py  income.py
app/middleware/: logging_middleware.py
app/models/: refresh_token.py
app/repositories/: base.py  income_repository.py  refresh_token_repository.py  user_repository.py
app/schemas/: auth.py  dashboard.py  expense.py  income.py  user.py
app/services/: dashboard_service.py  expense_service.py  income_service.py
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0002_create_income_table.py
backend/app/config/: settings.py
backend/app/core/: exceptions.py
backend/app/db/: base.py  session.py
backend/app/dependencies/: dashboard.py
backend/app/middleware/: security_headers.py
backend/tests/: conftest.py  test_auth_api.py  test_dashboard_api.py  test_dashboard_service.py  test_expense_api.py  test_expense_service.py  test_income_api.py  test_income_service.py
docs/: API.md  architecture.md
frontend/: .env.example  .eslintrc.json  .gitignore  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/src/: middleware.ts
tests/: test_auth_service.py  test_dashboard_service.py  test_income_api.py  test_income_service.py
(+99 files in other folders)
